--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="shortcut icon" href="/bangladesh.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <!-- aos setup  -->
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>eduEvent</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- aos  -->
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   </body>
 </html>
