--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <!-- aos setup  -->
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>eduEvent</title>
+    <title>eduEvent || Home</title>
   </head>
   <body>
     <div id="root"></div>
